--- a/templates/contact.html
+++ b/templates/contact.html
@@ -38,7 +38,7 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
+          <li><a href="./works.html" title="">02 : Projects</a></li>
           <li><a href="./about.html" title="">03 : About me</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
         </ul>
@@ -79,29 +79,26 @@
                           <span class="fa-icon">
                             <i class="fa fa-phone" aria-hidden="true"></i>
                           </span>
-                          + 33 9 07 45 12 65
+                          775-250-9817
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
-                          e-mail@mail.io
+                          jamesmacnv91@gmail.com
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                           </span>
-                          42 rue Moulbert 75016 Paris
+                          Reno, NV
                         </li>
                       </ul>
                       <h3>Follow me on social networks</h3>
-                      <a href="http://www.facebook.com" title="" class="fa-icon">
-                        <i class="fa fa-facebook"></i>
+                      <a href="https://github.com/JamesMacNV" title="" class="fa-icon">
+                        <i class="fa fa-github"></i>
                       </a>
-                      <a href="http://www.twitter.com" title="" class="fa-icon">
-                        <i class="fa fa-twitter"></i>
-                      </a>
-                      <a href="http://www.linkedin.com" title="" class="fa-icon">
+                      <a href="https://www.linkedin.com/in/james-macmillan-59144a19b/" title="" class="fa-icon">
                         <i class="fa fa-linkedin"></i>
                       </a>
 
@@ -122,7 +119,6 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
       </div>
     </div>
   </div>
